# kubernetes-stateful-scaling-demo

./: .dockerignore  .gitignore  Dockerfile  KUSTOMIZE_DECISION.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  k8s-compliance-report.txt  main.py  pyproject.toml  requirements.txt  test-security.py  validate-k8s-security.sh  validate-security.sh
.github/workflows/: ci-cd.yml  dependency-updates.yml  security-scan.yml
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  network-security-advanced.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  pod-security-policy.yaml  rbac.yaml  security-config.yaml
k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy-simple.yaml  persistent-volume-claim.yaml  persistent-volume.yaml  rbac.yaml  security-config.yaml  service.yaml
k8s/overlays/demo/: kustomization.yaml  namespace.yaml  replica-count.yaml  storage-config.yaml
k8s/overlays/production/: kustomization.yaml  namespace.yaml  replica-count.yaml  resource-limits.yaml  security-hardening.yaml  storage-config.yaml
k8s/overlays/staging/: ingress-config.yaml  kustomization.yaml  namespace.yaml  replica-count.yaml  resource-limits.yaml
k8s/patches/: resource-limits.yaml
templates/: index.html
