[project]
name = "stateful-guestbook"
version = "1.0.0"
description = "Production-grade security-hardened stateful scaling demo application"
authors = [{name = "Security Team", email = "security@company.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlmodel==0.0.22",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
    "pydantic==2.10.3",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pip-audit>=2.9.0",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used test

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
